dts | config: feat [X5-368] Support gpio wakeup in evb
Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: Ia45bf63ff1bf14530acbf8477eed97157d63fad4

--- a/arch/arm64/boot/dts/hobot/x5-evb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dts
@@ -10,6 +10,7 @@
 #include "x5.dtsi"
 #include "pinmux-func.dtsi"
 #include "pinmux-gpio.dtsi"
+#include <dt-bindings/input/linux-event-codes.h>
 
 / {
 	model = "Horizon Robotics X5 EVB board";
@@ -112,6 +113,21 @@
 			ecc-size = <0x0>;
 		};
 
+	};
+
+	gpio-keys {
+		compatible = "gpio-keys";
+		autorepeat;
+		pinctrl-names = "default";
+		pinctrl-0 = <&aon_gpio_2>;
+
+		key-power {
+			debounce-interval = <100>;
+			gpios = <&aon_gpio_porta 2 GPIO_ACTIVE_LOW>;
+			label = "GPIO Key Power";
+			linux,code = <KEY_POWER>;
+			wakeup-source;
+		};
 	};
 
 	gua_audio_rpc_wrapper:audio-rpc-wrapper {
