--- a/arch/arm64/configs/hobot_x5_soc_nand_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_nand_defconfig
@@ -197,6 +197,7 @@ CONFIG_DWMAC_DWC_QOS_ETH=y
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_REALTEK_PHY=y
 CONFIG_USB_NET_DRIVERS=m
+CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_SERIO_SERPORT is not set
 CONFIG_SERIO_AMBAKMI=y
