--- a/arch/arm64/configs/hobot_x5_soc_perf_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_perf_defconfig
@@ -213,6 +213,7 @@ CONFIG_DWMAC_DWC_QOS_ETH=y
 CONFIG_REALTEK_PHY=y
 CONFIG_USB_NET_DRIVERS=m
 CONFIG_USB_USBNET=m
+CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_SERIO_SERPORT is not set
 CONFIG_SERIO_AMBAKMI=y
