arm64: dts: hobot: x5: fix [X5-143|X5-153] Fix ion-cma not reserved in hobot_ion
1. Fixed compatible string;
2. Modified start and size to fit each dts.

Signed-off-by: dinggao.pan <dinggao.pan@horizon.cc>
Change-Id: I25f73306a67266783f95088616309ea20abe90a6

--- a/arch/arm64/boot/dts/hobot/x5-fpga.dts
+++ b/arch/arm64/boot/dts/hobot/x5-fpga.dts
@@ -41,13 +41,6 @@
 			linux,cma-default;
 		};
 
-		ion_cma: ion_cma {
-			compatible = "shared-dma-pool";
-			alignment = <0x0 0x2000>;
-			reusable;
-			size = <0x0 0x20000000>;
-			status = "okay";
-		};
 
 		ion_reserved: ion_reserved@b0000000 {
 			compatible = "ion-pool";
@@ -93,6 +86,13 @@
 			status = "okay";
 		};
 
+		ion_cma: ion_cma {
+			compatible = "ion-cma";
+			alignment = <0x0 0x2000>;
+			reusable;
+			reg = <0x0 0xd0000000 0x0 0x20000000>;
+			status = "okay";
+		};
 	};
 
 	gua_audio_rpc_wrapper:audio-rpc-wrapper {
