feat(dts): [X5-55] Add osd node in x5 dts
Signed-off-by: ming01.li <ming01.li@horizon.cc>
Change-Id: I0e35aa34cfa92e86c14fcf7b57a5b2318289fb2b

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -971,6 +971,11 @@
 				status = "okay";
 			};
 
+			osd: osd {
+				compatible = "hobot,osd";
+				status = "okay";
+			};
+
 			vin_vcon0: vcon@0 {
 				compatible = "hobot,vin-vcon";
 				type = <0>;
