arm64: configs: hobot: feat [X5-408] Enable EXFAT_FS support on Sunrise5
Signed-off-by: dinggao.pan <dinggao.pan@horizon.cc>
Change-Id: Ie022dba22bd7574320d7ed1cd93f93eb8df9afda

--- a/arch/arm64/configs/hobot_x5_soc_perf_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_perf_defconfig
@@ -561,6 +561,7 @@ CONFIG_EXT3_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_FANOTIFY=y
 CONFIG_VFAT_FS=y
+CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_HUGETLBFS=y
 CONFIG_EFIVAR_FS=y
