arm64: dts: hobot: x5: feat [X5-374] Add power-domain node for remoteproc driver
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.ai>
Change-Id: I67d8ad1beba338e598493bf0ba5cfde17371e675

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3143,7 +3143,7 @@
 			timesync-nanosec-reg = <0xd3ffff04>;
 			clocks = <&dspclks X5_DSP_HIFI5_CLK>, <&dspclks X5_DSP_HIFI5_APB_CLK>;
 			clock-names = "hifi5_clk", "hifi5_pbclk";
-			//power-domains = <&power X5_DSP_HIFI5>;
+			power-domains = <&power X5_DSP_HIFI5>;
 			resets = <&dsprst DSP_HIFI5_RESET>;
 		};
 
