--- a/arch/arm64/boot/dts/hobot/x5-svb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-svb.dts
@@ -953,85 +953,85 @@
 };
 
 &mipi_host0 {
-	//status = "okay";	//has enabled
-	/* camera sensor
-	   reset gpio:	   AON_GPIO_PIN1:	  498
-	   pwd gpio:	   AON_GPIO_PIN0:	  497
-	   mclk gpio:	   LSIO_SENSOR2_MCLK
-	*/
-        pinctrl-names = "default", "enable", "disable";
-        pinctrl-0 = <&aon_gpio_1 &aon_gpio_0>;
-        pinctrl-1 = <&pinctrl_sensor2_mclk>;
-        pinctrl-2 = <&lsio_gpio0_26>;
-        snrclk-idx = <2>;  //mclk index
+	status = "okay";
+	pinctrl-names = "enable", "disable";
+	pinctrl-0 = <&pinctrl_sensor2_mclk>;	//mclk2
+	pinctrl-1 = <&lsio_gpio0_26>;
+	snrclk-idx = <2>;  //mclk index
 };
 
 &mipi_host1 {
-	//status = "okay";	//has enabled
-	/* camera sensor
-	   reset gpio:	   AON_GPIO_PIN5:	  502
-	   pwd gpio:	   AON_GPIO_PIN2:	  499
-	   mclk gpio:	   LSIO_SENSOR3_MCLK
-	*/
-        pinctrl-names = "default", "enable", "disable";
-        pinctrl-0 = <&aon_gpio_5 &aon_gpio_2>;
-        pinctrl-1 = <&pinctrl_sensor3_mclk>;
-        pinctrl-2 = <&lsio_gpio0_27>;
-        snrclk-idx = <3>;  //mclk index
+	status = "okay";
+	pinctrl-names = "enable", "disable";
+	pinctrl-0 = <&pinctrl_sensor3_mclk>;	//mclk3
+	pinctrl-1 = <&lsio_gpio0_27>;
+	snrclk-idx = <3>;  //mclk index
 };
 
 &mipi_host2 {
-	//status = "okay";	//has enabled
-	/* camera sensor
-	   reset gpio:	   AON_GPIO_PIN6:	  503
-	   pwd gpio:	   AON_GPIO_PIN7:	  504
-	   mclk gpio:	   LSIO_SENSOR0_MCLK
-	 */
-        pinctrl-names = "default", "enable", "disable";
-        pinctrl-0 = <&aon_gpio_6 &aon_gpio_7>;
-        pinctrl-1 = <&pinctrl_sensor0_mclk>;
-        pinctrl-2 = <&lsio_gpio0_24>;
-        snrclk-idx = <0>;  //mclk index
+	status = "okay";
+	pinctrl-names = "enable", "disable";
+	pinctrl-0 = <&pinctrl_sensor0_mclk>;	//mclk0
+	pinctrl-1 = <&lsio_gpio0_24>;
+	snrclk-idx = <0>;  //mclk index
 };
 
 &mipi_host3 {
-	//status = "okay";	//has enabled
-	/* camera sensor
-	   reset gpio:	   LSIO_GPIO0_23:	  393
-	   pwd gpio:	   LSIO_GPIO0_22:	  392
-	   mclk gpio:	   LSIO_SENSOR1_MCLK
-	*/
-        pinctrl-names = "default", "enable", "disable";
-        pinctrl-0 = <&lsio_gpio0_23 &lsio_gpio0_22>;
-        pinctrl-1 = <&pinctrl_sensor1_mclk>;
-        pinctrl-2 = <&lsio_gpio0_25>;
-        snrclk-idx = <1>;  //mclk index
+	status = "okay";
+	pinctrl-names = "enable", "disable";
+	pinctrl-0 = <&pinctrl_sensor1_mclk>;	//mclk1
+	pinctrl-1 = <&lsio_gpio0_25>;
+	snrclk-idx = <1>;  //mclk index
 };
 
 &vin_vcon0 {
-	//status = "okay";	//has enabled
-	bus = <0>;	//i2c-0
+	status = "okay";
+	/* camera sensor
+	   reset gpio:	   AON_GPIO_PIN1:	  498
+	   pwd gpio:	   AON_GPIO_PIN0:	  497
+	*/
+	pinctrl-names = "default";
+	pinctrl-0 = <&aon_gpio_0 &aon_gpio_1>;
 	gpio_oth = <497 498>;	//pwd gpio、reset gpio
+	bus = <0>;	//i2c-0
 	lpwm_chn = <0 1 2 3>;
 };
 
 &vin_vcon1 {
-	//status = "okay";	//has enabled
-	bus = <1>;	//i2c-1
+	status = "okay";
+	/* camera sensor
+	   reset gpio:	   AON_GPIO_PIN5:	  502
+	   pwd gpio:	   AON_GPIO_PIN2:	  499
+	*/
+	pinctrl-names = "default";
+	pinctrl-0 = <&aon_gpio_2 &aon_gpio_5>;
 	gpio_oth = <499 502>;	//pwd gpio、reset gpio
+	bus = <1>;	//i2c-1
 	lpwm_chn = <0 1 2 3>;
 };
 
 &vin_vcon2 {
-	//status = "okay";	//has enabled
-	bus = <7>;	//NOTICE i2c-7 same this hifi5
+	status = "okay";
+	/* camera sensor
+	   reset gpio:	   AON_GPIO_PIN6:	  503
+	   pwd gpio:	   AON_GPIO_PIN7:	  504
+	*/
+	pinctrl-names = "default";
+	pinctrl-0 = <&aon_gpio_7 &aon_gpio_6>;
 	gpio_oth = <504 503>;	//pwd gpio、reset gpio
+	bus = <7>;	//NOTICE i2c-7 same this hifi5
 	lpwm_chn = <0 1 2 3>;
 };
 
 &vin_vcon3 {
-	//status = "okay";	//has enabled
-	bus = <3>;	//i2c-3
+	status = "okay";
+	/* camera sensor
+	   reset gpio:	   LSIO_GPIO0_23:	  393
+	   pwd gpio:	   LSIO_GPIO0_22:	  392
+	*/
+	pinctrl-names = "default";
+	pinctrl-0 = <&lsio_gpio0_22 &lsio_gpio0_23>;
 	gpio_oth = <392 393>;	//pwd gpio、reset gpio
+	bus = <3>;	//i2c-3
 	lpwm_chn = <0 1 2 3>;
 };
