--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -979,33 +979,29 @@
 			vin_vcon0: vcon@0 {
 				compatible = "hobot,vin-vcon";
 				type = <0>;
-				bus = <4>;	// i2c bus
 				rx_phy = <1 0>; // dphy  rx_index
-				status = "okay";
+				status = "disabled";
 			};
 
 			vin_vcon1: vcon@1 {
 				compatible = "hobot,vin-vcon";
 				type = <0>;
-				bus = <3>;	// i2c bus
 				rx_phy = <1 1>; // dphy  rx_index
-				status = "okay";
+				status = "disabled";
 			};
 
 			vin_vcon2: vcon@2 {
 				compatible = "hobot,vin-vcon";
 				type = <0>;
-				bus = <1>;	// i2c bus
 				rx_phy = <1 2>; // dphy  rx_index
-				status = "okay";
+				status = "disabled";
 			};
 
 			vin_vcon3: vcon@3 {
 				compatible = "hobot,vin-vcon";
 				type = <0>;
-				bus = <0>;	// i2c bus
 				rx_phy = <1 3>; // dphy  rx_index
-				status = "okay";
+				status = "disabled";
 			};
 
 			mipi_dphy: mipi_dphy@0 {
@@ -1023,7 +1019,7 @@
 				interrupts =
 					<GIC_SPI 44 IRQ_TYPE_LEVEL_HIGH>;
 				interrupt-names = "csi";
-				status = "okay";
+				status = "disabled";
 			};
 
 			mipi_host1: mipi_host1 {
@@ -1034,7 +1030,7 @@
 				interrupts =
 					<GIC_SPI 46 IRQ_TYPE_LEVEL_HIGH>;
 				interrupt-names = "csi";
-				status = "okay";
+				status = "disabled";
 			};
 
 			mipi_host2: mipi_host2 {
@@ -1045,7 +1041,7 @@
 				interrupts =
 					<GIC_SPI 45 IRQ_TYPE_LEVEL_HIGH>;
 				interrupt-names = "csi";
-				status = "okay";
+				status = "disabled";
 			};
 
 			mipi_host3: mipi_host3 {
@@ -1056,7 +1052,7 @@
 				interrupts =
 					<GIC_SPI 47 IRQ_TYPE_LEVEL_HIGH>;
 				interrupt-names = "csi";
-				status = "okay";
+				status = "disabled";
 			};
 
 			cam_sif_iommu: cam_sif_iommu@3d0b0024 {
