driver:te600: fix [X5-460] Dm-verity use kernel hash, don't use te600
Revert "configs: te600: feat [cr_id_skip] Buildin te600"

This reverts commit b81dfa1b1bb0939038bc15abad5ceba4e76422fd.

Change-Id: Ic8ac65212951ccf81ec8e20ffd2197a3b4f8afbb
Signed-off-by: zhiwei01.li <zhiwei01.li@hobot.cc>

--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -587,13 +587,14 @@ CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_DH=y
 CONFIG_CRYPTO_ECDH=y
 CONFIG_CRYPTO_DES=y
+CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_CMAC=y
+CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_DRBG_HASH=y
 CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
 CONFIG_CRYPTO_USER_API_RNG=y
 CONFIG_CRYPTO_USER_API_AEAD=y
-CONFIG_CRYPTO_DEV_TE=y
 CONFIG_CRC_ITU_T=y
 CONFIG_CRC7=y
 CONFIG_LIBCRC32C=m
