enet: tsn: feat [X5-59] Add tsn feature for ethernet
- Baseline commit 92339e97798 & a4e4abad87072.
- Added tsn support for hobot ethernet.

Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>
Change-Id: Ic94b0d395c216e28b5a685ea1bf2a8b92d35cb11

--- a/net/Kconfig
+++ b/net/Kconfig
@@ -242,6 +242,7 @@ source "net/switchdev/Kconfig"
 source "net/l3mdev/Kconfig"
 source "net/qrtr/Kconfig"
 source "net/ncsi/Kconfig"
+source "net/tsn/Kconfig"
 
 config PCPU_DEV_REFCNT
 	bool "Use percpu variables to maintain network device refcount"
