arm64: configs: hobot: x5: feat [X5-59] Enable hobot-ether for Sunrise5
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>
Change-Id: Ia35a99e01c391c7a4cf119e9f5fe39f113ed1f5a

--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -208,6 +208,7 @@ CONFIG_DWMAC_DWC_QOS_ETH=y
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
+CONFIG_X5_ETH=y
 CONFIG_REALTEK_PHY=y
 CONFIG_USB_NET_DRIVERS=m
 CONFIG_USB_USBNET=m
