--- a/arch/arm64/configs/hobot_x5_soc_perf_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_perf_defconfig
@@ -208,6 +208,7 @@ CONFIG_DWMAC_DWC_QOS_ETH=y
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
+CONFIG_X5_ETH=y
 CONFIG_REALTEK_PHY=y
 CONFIG_USB_NET_DRIVERS=m
 CONFIG_USB_USBNET=m
