--- a/arch/arm64/boot/dts/hobot/x5-svb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-svb.dts
@@ -616,8 +616,19 @@
 	};
 };
 
-&gmac_tsn {
+&hobot_tsn {
 	status = "okay";
+
+	phy-mode = "rgmii-id";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_enet &lsio_gpio0_29>;
+	phyreset-gpio = <&ls_gpio0_porta 29 GPIO_ACTIVE_HIGH>;
+};
+
+&gmac_tsn {
+	status = "disabled";
+
+	phy-mode = "rgmii-id";
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_enet &lsio_gpio0_29>;
 	phyreset-gpio = <&ls_gpio0_porta 29 GPIO_ACTIVE_HIGH>;
