--- a/arch/arm64/boot/dts/hobot/x5-evb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dts
@@ -11,6 +11,7 @@
 #include "pinmux-func.dtsi"
 #include "pinmux-gpio.dtsi"
 #include <dt-bindings/input/linux-event-codes.h>
+#include <autoconf.h>
 
 / {
 	model = "Horizon Robotics X5 EVB board";
@@ -712,6 +713,15 @@ the following ports need to be deleted*/
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_qspi>;
 
+#ifdef CONFIG_MTD_SPI_NOR
+	spi-flash@0 {
+		compatible = "jedec,spi-nor";
+		spi-max-frequency = <50000000>;
+		rx-sample-delay-ns = <10>;
+		reg = <0>;
+	};
+#endif
+#ifdef CONFIG_MTD_SPI_NAND
 	spi-flash@0 {
 		compatible = "spi-nand";
 		spi-max-frequency = <50000000>;
@@ -720,6 +730,7 @@ the following ports need to be deleted*/
 		spi-rx-bus-width = <4>;
 		reg = <0>;
 	};
+#endif
 };
 
 &snd0 {
