arm64: dts: hobot: x5: fix [X5-562] Fix dependency of csix_pclk on csi0_pclk
1. Four csix_pclk pass through a mux, and the control of the mux is csi0_pclk,
   so we currently need to temporarily open the mipi host0 dts node.

Change-Id: I14396ad7b1f59a40f535fbcaf3cc703bd9f17e08

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -1019,7 +1019,7 @@
 				interrupts =
 					<GIC_SPI 44 IRQ_TYPE_LEVEL_HIGH>;
 				interrupt-names = "csi";
-				status = "disabled";
+				status = "okay";
 			};
 
 			mipi_host1: mipi_host@3d070000 {
