clk: feat [X5-472] Disable dsp pll frac divide
Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: Ife332e9358e552730b55cad2a681b9aecef9d9c1

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -1806,6 +1806,7 @@
 			clock-names = "osc", "32k";
 			idle-dev = <&noc_idle>;
 			#clock-cells = <1>;
+			disable-dsp-pll-frac;
 			status = "disabled";
 		};
 
