bpu: fix [X5-629] Get polling_ms from dts
Summary: if pollingms is 0, bpu_ondemand governor will not take effect, getting
it from dts, default value 3000 ms
Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: Id6892509a308fcf4bd810c1b471094f743096bb0

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2102,6 +2102,7 @@
 			#cooling-cells = <2>;
 			cooling-min-level = <0>;
 			cooling-max-level = <3>;
+			polling_ms = <3000>;
 			status = "okay";
 		};
 
