dts: camsys: [X5-633] Add dw230 axi clock to vse node
Signed-off-by: ming01.li <ming01.li@horizon.cc>
Change-Id: I5f9a973b429b2f4bc05831278eb43f73208682cf

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -964,9 +964,10 @@
 				clocks =
 					<&hpsclks X5_CAM_VSE_CORE_CLK>,
 					<&hpsclks X5_CAM_VSE_UPSCALE_CLK>,
-					<&hpsclks X5_CAM_DEWARP_HCLK>,
-					<&hpsclks X5_CAM_VSE_AXI_CLK>;
-				clock-names = "core", "ups", "gdc_hclk", "axi";
+					<&hpsclks X5_CAM_VSE_AXI_CLK>,
+					<&hpsclks X5_CAM_DEWARP_AXI_CLK>,
+					<&hpsclks X5_CAM_DEWARP_HCLK>;
+				clock-names = "core", "ups", "axi", "gdc_axi", "gdc_hclk";
 				resets = <&socrst CAM_DEWARP_RESET>;
 				reset-names = "rst";
 				instances = <7>;
