drivers: socinfo: feat [X5-6] Add bak_slot node in socinfo
Signed-off-by: zhiwei01.li <zhiwei01.li@horizon.cc>
Change-Id: Ic65f13f9c62851f451c18b2331227fe93317c5c7

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -785,6 +785,8 @@
 			boot_mode = "0";
 			socuid = "00000000000000000000000000000000";
 			chip_id = "00000000";
+			bak_slot_reg = <0x31021000 4 8 0x0000ff00>;
+			boot_count_reg = <0x31021000 4 0 0x000000ff>;
 		};
 
 
