dts: uart: feat [X5-397] Enable the device tree configuration for the Bluetooth rtl8852bs serial port uart6.
Signed-off-by: jinbao.he <jinbao.he@horizon.cc>
Change-Id: I7647698efbc090839ac125079fdc5b8fbd6917b5

--- a/arch/arm64/boot/dts/hobot/x5-evb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dts
@@ -229,6 +229,12 @@
 	dmas = <&axi_dmac 5>, <&axi_dmac 4>;
 };
 
+&uart6 {
+	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart6>;
+};
+
 &axi_dmac {
 	status = "okay";
 };
