arm64: dts: hobot: fix [X5-779 X5-780] Disable remoteproc/ipc/gua nodes temperarily
Summary:
Ongoing rework of remoteproc/ipc and gua drivers for properly acquire reserved
memory from dts will break remoteproc/ipc and gua driver probe. Disable
remoteproc/ipc/gua drivers for now.

Signed-off-by: dinggao.pan <dinggao.pan@horizon.cc>
Change-Id: Iefea498b7740514a244abb2c197029df46e8ad73

--- a/arch/arm64/boot/dts/hobot/x5-som.dts
+++ b/arch/arm64/boot/dts/hobot/x5-som.dts
@@ -117,13 +117,13 @@
 	gua_audio_rpc_wrapper:audio-rpc-wrapper {
 		compatible = "gua,audio-rpc-wrapper";
 		rpmsg-enable;
-		status = "okay";
+		status = "disabled";
 	};
 
 	ipc_wrapper:ipc-wrapper {
 		compatible = "gua,ipc-wrapper";
 		rpmsg-enable;
-		status = "okay";
+		status = "disabled";
 	};
 
 	sound_misc_0:misc-hifi {
@@ -133,7 +133,7 @@
 										>;
 		msg-wrapper = <&ipc_wrapper>;
 		memory-region = <&adsp_bsp_reserved>;
-		status = "okay";
+		status = "disabled";
 	};
 
 	sound_cpu:cpu-dai {
@@ -141,7 +141,7 @@
 		msg-wrapper = <&ipc_wrapper>;
 		gua,pcm-buffer-size = <0x1E000>;
 		pcm-rpmsg-channel-mapping = <0x00>, <0x00>, <0x00>, <0x00>, <0x00>;
-		status = "okay";
+		status = "disabled";
 	};
 
 	sound-machine {
@@ -149,7 +149,7 @@
 		model = "gua-audio";
 		cpu-dai = <&sound_cpu>;
 		memory-region = <&audio_reserved>;
-		status = "okay";
+		status = "disabled";
 	};
 
 	vdd08_gpu_reg: vdd08_gpu_reg@3 {
@@ -393,19 +393,19 @@
 };
 
 &mailbox0 {
-	status = "okay";
+	status = "disabled";
 };
 
 &ipc_instance0 {
-	status = "okay";
+	status = "disabled";
 };
 
 &ipc_instance1 {
-	status = "okay";
+	status = "disabled";
 };
 
 &ipc_instance2 {
-	status = "okay";
+	status = "disabled";
 };
 
 &pvt {
@@ -413,7 +413,7 @@
 };
 
 &remoteproc_hifi5 {
-	status = "okay";
+	status = "disabled";
 	hifi5-rpmsg-channel-mapping = <0x00>, <0x00>;
 	msg-wrapper = <&ipc_wrapper>;
 };
