arm64: configs: x5: feat [X5-55] Enable osd module compile
Signed-off-by: ming01.li <ming01.li@horizon.cc>
Change-Id: I79eb137442dfe3b02bbfdbacfa0fe02908d2d1bd

--- a/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
@@ -298,6 +298,7 @@ CONFIG_HOBOT_GDC_JPLUS=m
 CONFIG_HOBOT_SENSOR=m
 CONFIG_HOBOT_DESERIAL=m
 CONFIG_HOBOT_LPWM=m
+CONFIG_HOBOT_OSD=m
 CONFIG_HOBOT_VSI_CAM=m
 CONFIG_HOBOT_MIPI_CSI=y
 CONFIG_HOBOT_CODEC_NODE=m
