--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -787,6 +787,7 @@
 			chip_id = "00000000";
 			bak_slot_reg = <0x31021000 4 8 0x0000ff00>;
 			boot_count_reg = <0x31021000 4 0 0x000000ff>;
+			reg = <0x31021008 0x4>;   /* ddr info reg */
 		};
 
 
